# Almond

./: Almond.txt  CMakeLists.txt  FFT.cpp  ImageInfo.h  README.md  Resume.md  Resume.txt  Structr.txt  app  cam  camera.cpp  camera.h  camera.hpp  center.cpp  detect  edge.cpp  edges.h  git.sh  imgproc.cpp  imgproc.h  imgprocessing.cpp  imgprocessing.h  info.md  main.cpp  main.h  makefile  temp  temp.cpp  test_opencv
misc/: Structr.txt
